--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -4,6 +4,7 @@
     android:id="@+id/list_view_players"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="@null"
     tools:context="com.st00.afir.footballapp.MainActivity">
 
 </ListView>
