--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="defensive_Midfield">#F5A623</color>
     <color name="central_Midfield">#FF7D50</color>
     <color name="attacking_Midfield">#FC6644</color>
-    <color name="wing">#E75F60</color>
+    <color name="wing">#E13A70</color>
     <color name="secondary_Striker">#E13A20</color>
     <color name="centre_Forward">#C03823</color>
 </resources>
