--- a/app/src/main/res/layout/grid_view_teams.xml
+++ b/app/src/main/res/layout/grid_view_teams.xml
@@ -3,8 +3,10 @@
     android:id="@+id/grid_view_teams"
     android:numColumns="3"
     android:gravity="center"
+    android:rowCount="5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_columnWeight="1">
+    android:layout_columnWeight="1"
+    android:padding="16dp">
 
 </GridView>
