--- a/app/src/main/res/layout/list_view_players.xml
+++ b/app/src/main/res/layout/list_view_players.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ListView
     android:id="@+id/list_view_players"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="@null"
     tools:context="com.st00.afir.footballapp.TeamActivity">
-
 </ListView>
+
+    <TextView
+        android:id="@+id/message_no_data"
+        android:layout_centerInParent = "true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"/>
+
+</RelativeLayout>
